--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@asymmetrik/ngx-leaflet": "^5.0.2",
+    "@types/leaflet": "^1.4.4",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.4.0",
+    "leaflet-geosearch": "^2.7.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
