--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet": "^1.4.0",
     "leaflet-geosearch": "^2.7.0",
     "leaflet.smooth_marker_bouncing": "^1.3.0",
+    "ngx-cookie-service": "^2.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
